Fixed links position on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,7 @@ body {
 a {
   color: $black1;
   text-decoration: none; 
+  width: fit-content;
   &:hover {
     color: $primary;
   }
